--- a/votacao/templates/votacao/index.html
+++ b/votacao/templates/votacao/index.html
@@ -10,10 +10,10 @@
 <ul>
  {% for questao in latest_question_list %}
  <li>
- <a href="/votacao/{{ questao.id }}">
- {{ questao.questao_texto }}
- </a>
- </li>
+<a href="{% url 'votacao:detalhe' questao.id %}">
+{{ questao.questao_texto }}
+</a>
+</li>
  {% endfor %}
 </ul>
 {% else %}
