siteiscte- projeto DIAM em Django. Ex5 v1.1

--- a/votacao/templates/votacao/index.html
+++ b/votacao/templates/votacao/index.html
@@ -20,6 +20,11 @@
 <p>Nao ha questoes disponiveis.</p>
 {% endif %}
 
+<button>
+    <a  href="{% url 'votacao:criar' %}">
+        Criar Questão
+    </a>
+</button>
 </body>
 
 </html>
