--- a/votacao/templates/votacao/editarquestao.html
+++ b/votacao/templates/votacao/editarquestao.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Editar Questão</title>
 </head>
 <body>
+<h1>{{ questao.questao_texto }}</h1>
 
 </body>
 </html>
