siteiscte- projeto DIAM em Django. Ex5 vfinal

--- a/votacao/templates/votacao/index.html
+++ b/votacao/templates/votacao/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
-
+<header>{{ username }}</header>
 {% if latest_question_list %}
 <ul>
  {% for questao in latest_question_list %}
