--- a/votacao/templates/votacao/registo.html
+++ b/votacao/templates/votacao/registo.html
@@ -5,6 +5,21 @@
     <title>Registo utilizador</title>
 </head>
 <body>
+<form action="{% url 'votacao:registo'%}" method="POST">
+    {% csrf_token %}
+    <label for="username">Username</label>
+    <input type="text" id="username" name="username"/>
+    <br>
+    <label for="email">Email</label>
+    <input type="text" id="email" name="email"/>
+    <br>
+    <label for="curso">Curso</label>
+    <input type="text" id="curso" name="curso"/>
+    <br>
+    <label for="password">Password</label>
+    <input type="text" id="password" name="password"/>
+    <br>
+    <input type="submit" value="registar" id="registar"/>
 
 </body>
 </html>
