--- a/votacao/templates/votacao/criarquestao.html
+++ b/votacao/templates/votacao/criarquestao.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+{% extends "votacao/home.html" %}
 <html lang="en">
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <title>Criar Questão</title>
@@ -15,4 +17,5 @@
     </form>
 
 </body>
+{% endblock %}
 </html>
