--- a/votacao/templates/votacao/editarquestao.html
+++ b/votacao/templates/votacao/editarquestao.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+{% extends "votacao/home.html" %}
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <title>Editar Questão</title>
@@ -14,4 +16,5 @@
 </form>
 
 </body>
+{% endblock %}
 </html>
