--- a/votacao/templates/votacao/login.html
+++ b/votacao/templates/votacao/login.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+{% extends "votacao/home.html" %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>{% block titulo %}Login{% endblock %}</title>
 </head>
 <body>
 {% block content %}
